# FastMF_public

./: .gitignore  README.md  pyproject.toml
data/schemes/: scheme-HCPMGH_schemeWithB0.txt  scheme-StLucGE260_bvals.txt  scheme-StLucGE260_bvecs.txt  scheme-StLucGE260_scheme.txt  scheme-StLucGE260_schemeWithB0.txt  scheme-StLucGE260v2_bvals.txt  scheme-StLucGE260v2_bvecs.txt  scheme-StLucGE260v2_scheme.txt  scheme-StLucGE260v2_schemeWithB0.txt  scheme-StLucGE260v3_bvals.txt  scheme-StLucGE260v3_bvecs.txt  scheme-StLucGE260v3_scheme.txt  scheme-StLucGE260v3_schemeWithB0.txt  scheme-StLucGE260v4_bvecs.txt  scheme-StLucGE260v4_scheme.txt  scheme-StLucGE260v4_schemeWithB0.txt  scheme-StLucGE534_bvals.txt  scheme-StLucGE534_bvecs.txt  scheme-StLucGE534_scheme.txt  scheme-StLucGE534_schemeWithB0.txt  scheme-StLucGE_bvals.txt  scheme-StLucGE_bvecs.txt  scheme-StLucGE_scheme.txt  scheme-StLucGE_schemeWithB0.txt
examples/: genTrainAndTestData.py  invivo_fullylearned.py  invivo_hybrid.py  prepare_report.py  report.py  slurm-synthetizer.py  testStLucGE.py  train_FullyLearned_MLP.py  train_Hybrid_MLP.py
