[tool.poetry]
name = "fastmf"
version = "0.1.0"
description = "FastMF is a python package for microstructural property characterization using deep learning based on diffusion MRI data."
authors = ["Quentin Dessain <quentin.dessain@uclouvain.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
dipy = "^1.6"
microstructure-fingerprinting-rensonnetg = {git = "https://github.com/rensonnetg/microstructure_fingerprinting.git"}
matplotlib = "^3.5"
cvxpy = "^1.3.1"
numba = "^0.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
